--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,6 @@ dependencies {
     compile 'com.loopj.android:android-async-http:1.4.5'
     //load remote images from the network into imageview
     compile 'com.squareup.picasso:picasso:2.5.2'
+    //display image in a rounded image
+    compile 'com.makeramen:roundedimageview:2.0.1'
 }
