--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     //display image in a rounded image
     compile 'com.makeramen:roundedimageview:2.0.1'
+    compile 'com.android.support:support-v4:22.1.1'
 }
