--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,13 +2,15 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.pshegde.instagramclient" >
 
-    <uses-permission android:name="android.permission.internet"></uses-permission>
+    <uses-permission android:name="android.permission.internet" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@android:style/Theme.NoTitleBar">
-        <!--android:theme="@style/CustomTheme" >-->
+        android:theme="@android:style/Theme.NoTitleBar" >
+
+        <!-- android:theme="@style/CustomTheme" > -->
         <activity
             android:name=".PhotosActivity"
             android:label="@string/app_name"
@@ -18,6 +20,11 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".CommentActivity"
+            android:label="@string/title_activity_comment"
+            android:theme="@style/CustomTheme">
         </activity>
     </application>
 
