--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     //display image in a rounded image
     compile 'com.makeramen:roundedimageview:2.0.1'
     compile 'com.android.support:support-v4:22.1.1'
+    compile 'de.hdodenhof:circleimageview:1.3.0'
 }
